--- a/tools/globe_view.html
+++ b/tools/globe_view.html
@@ -6,8 +6,9 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.js"></script>
 	<script src="OrbitControls.js"></script>
 	<script>
-		var R = 100.0
-		var camera, scene, renderer, container, lights, globeMesh;
+		var R = 637.8
+		var camera, scene, renderer, container, lights;
+		var globeMesh, sunMesh, moonMesh, glowMesh, skybox;
 
 		function toRadians(d) {
 			return d * Math.PI / 180.0;
@@ -17,35 +18,57 @@
 		 */
 		function getVertexPositions(cellData, R) {
 			return $.map(cellData.vertices, function(v) {
-				var R_elev = R;
-				// if (cellData.atts.hasOwnProperty('STD_ELEV')) 
-				// 	R_elev = R * (1 + .00001 * cellData.atts.STD_ELEV);
-				// else
-				// 	R_elev = R;
-				return [[1 * R_elev * Math.cos(toRadians(v[1])) * Math.cos(toRadians(v[0])),
-								 1 * R_elev * Math.sin(toRadians(v[1])),
-								 1 * R_elev * Math.cos(toRadians(v[1])) * Math.sin(toRadians(v[0]))
+				return [[-1 * R * Math.cos(toRadians(v[1])) * Math.cos(toRadians(v[0])),
+								 1 * R * Math.sin(toRadians(v[1])),
+								 1 * R * Math.cos(toRadians(v[1])) * Math.sin(toRadians(v[0]))
 								 ]]
 			})
 		}
 
 		function createCellGeometry(geo, cell, R, vi) {
-			var vp = getVertexPositions(cell, R);
-			// console.log(vp);
+			var dR;
+			if (cell.atts.hasOwnProperty('STD_ELEV')) 
+				dR = R * (.00001 * cell.atts.STD_ELEV);
+			else
+				dR = 0;
+			var vp1 = getVertexPositions(cell, R + dR);
+			var vp2 = getVertexPositions(cell, R - dR);
 			var color = 0x0000f0;
 			geo.vertices.push(
-				new THREE.Vector3(vp[0][0], vp[0][1], vp[0][2]),
-				new THREE.Vector3(vp[1][0], vp[1][1], vp[1][2]),
-				new THREE.Vector3(vp[2][0], vp[2][1], vp[2][2]),
-				new THREE.Vector3(vp[3][0], vp[3][1], vp[3][2]),
-				new THREE.Vector3(vp[4][0], vp[4][1], vp[4][2]),
-				new THREE.Vector3(vp[5][0], vp[5][1], vp[5][2])
+				new THREE.Vector3(vp1[0][0], vp1[0][1], vp1[0][2]),
+				new THREE.Vector3(vp1[1][0], vp1[1][1], vp1[1][2]),
+				new THREE.Vector3(vp1[2][0], vp1[2][1], vp1[2][2]),
+				new THREE.Vector3(vp1[3][0], vp1[3][1], vp1[3][2]),
+				new THREE.Vector3(vp1[4][0], vp1[4][1], vp1[4][2]),
+				new THREE.Vector3(vp1[5][0], vp1[5][1], vp1[5][2]),
+				new THREE.Vector3(vp2[0][0], vp2[0][1], vp2[0][2]),
+				new THREE.Vector3(vp2[1][0], vp2[1][1], vp2[1][2]),
+				new THREE.Vector3(vp2[2][0], vp2[2][1], vp2[2][2]),
+				new THREE.Vector3(vp2[3][0], vp2[3][1], vp2[3][2]),
+				new THREE.Vector3(vp2[4][0], vp2[4][1], vp2[4][2]),
+				new THREE.Vector3(vp2[5][0], vp2[5][1], vp2[5][2])
 			);
 			faces = [
+				// outer tile
 				new THREE.Face3(0+vi, 1+vi, 2+vi),
 				new THREE.Face3(3+vi, 4+vi, 5+vi),
 				new THREE.Face3(0+vi, 2+vi, 3+vi),
-				new THREE.Face3(0+vi, 3+vi, 5+vi)
+				new THREE.Face3(0+vi, 3+vi, 5+vi),
+				// walls
+				new THREE.Face3( 0+vi, 6+vi, 7+vi),
+				new THREE.Face3( 7+vi, 1+vi, 0+vi),
+				new THREE.Face3( 1+vi, 7+vi, 8+vi),
+				new THREE.Face3( 8+vi, 2+vi, 1+vi),
+				new THREE.Face3( 2+vi, 8+vi, 9+vi),
+				new THREE.Face3( 9+vi, 3+vi, 2+vi),
+				new THREE.Face3( 3+vi, 9+vi,10+vi),
+				new THREE.Face3(10+vi, 4+vi, 3+vi),
+				new THREE.Face3( 4+vi,10+vi,11+vi),
+				new THREE.Face3(11+vi, 5+vi, 4+vi),
+				new THREE.Face3( 5+vi,11+vi, 6+vi),
+				new THREE.Face3( 6+vi, 0+vi, 5+vi)
+
+				// inner tile
 			];
 			// faces = [
 			// 	new THREE.Face3(2+vi, 1+vi, 0+vi),
@@ -64,7 +87,8 @@
 				$.each(faces, function(i, face) { face.color.setRGB( .8, .8, .9); });
 			// else if (cell.atts.SOIL_COLOR < 10)
 			// 	$.each(faces, function(i, face) { face.color.setRGB( .85, .75, .5); });
-			else if (cell.atts.LANDFRAC_PFT > .6)
+			else if ((cell.atts.LANDFRAC_PFT > .5 && cell.atts.STD_ELEV > 1)
+				       || cell.atts.LANDFRAC_PFT > .6)
 				$.each(faces, function(i, face) { face.color.setRGB( .2, .35, .2); });
 			else
 				$.each(faces, function(i, face) { face.color.setRGB( .1, .1, .8); });
@@ -76,8 +100,8 @@
 		function init(json) {
 			console.log('init');
 			container = document.getElementById( 'container' );
-			camera = new THREE.PerspectiveCamera( 36, window.innerWidth / window.innerHeight, 1, 3500 );
-			camera.position.z = 1000;
+			camera = new THREE.PerspectiveCamera( 36, window.innerWidth / window.innerHeight, 1, 100000000 );
+			camera.position.z = 3000;
 			camera.lookAt(0, 0, 0);
 			scene = new THREE.Scene();
 
@@ -97,12 +121,16 @@
 			scene.add( lights[ 1 ] );
 			// scene.add( lights[ 2 ] );
 
+			// ---------------------
+			// Earth globe
+			// ---------------------
+
 			var geo = new THREE.Geometry();
 			var vi = 0;
 			$.each(json, function(i) {
 				var cell = json[i];
 				createCellGeometry(geo, cell, R, vi);
-				vi = vi + 6
+				vi = vi + 12;
 			});
 			geo.computeBoundingSphere();
 			geo.computeFaceNormals();
@@ -111,18 +139,93 @@
 				{
 					wireframe: false, 
 					color: 0xffffff, 
-					emissive: 0x222222,
-					metalness: 0.5,
+					emissive: 0x111122,
 					shading: THREE.FlatShading,
 					vertexColors: THREE.FaceColors,
-					side: THREE.DoubleSide,
-					// roughne
+					side: THREE.DoubleSide
 				} 
 			);
 			globeMesh = new THREE.Mesh(geo, material);
-			// globeMesh.rotation.x = -Math.PI / 2;
-
 			scene.add(globeMesh);
+
+			// ---------------------
+			// Atmosphere Glow
+			// ---------------------
+
+			var glowGeometry = new THREE.SphereGeometry(R * 1.02, 64, 64);
+			var glowMaterial = new THREE.ShaderMaterial( 
+			{
+			    uniforms: 
+				{ 
+					"c":   { type: "f", value: 0.9 },
+					"p":   { type: "f", value: 2.8 },
+					glowColor: { type: "c", value: new THREE.Color(0xb2b2ff) },
+					viewVector: { type: "v3", value: camera.position }
+				},
+				vertexShader:   document.getElementById( 'vertexShader'   ).textContent,
+				fragmentShader: document.getElementById( 'fragmentShader' ).textContent,
+				side: THREE.FrontSide,
+				blending: THREE.AdditiveBlending,
+				transparent: true
+			}   );
+			glowMesh = new THREE.Mesh(glowGeometry, glowMaterial);
+			scene.add(glowMesh);
+
+			// ---------------------
+			// Sun
+			// ---------------------
+
+			var sunGeometry = new THREE.SphereGeometry(69600, 32, 32);
+			var sunMaterial = new THREE.MeshStandardMaterial(
+				{
+					color: 0xffff00,
+					emissive: 0xffff00
+				}
+			)
+			// var sunLocation = new THREE.Vector3(-10600000, 0, -10600000);
+			var sunLocation = new THREE.Vector3(0, 0, 15000000);
+			sunMesh = new THREE.Mesh(sunGeometry, sunMaterial);
+			scene.add(sunMesh);
+			sunMesh.position.set(-10600000, 0, 10600000);
+			lights[1].position.set(-10600000, 0, 10600000);
+
+			// ---------------------
+			// Moon
+			// ---------------------
+
+			var moonGeometry = new THREE.SphereGeometry(174, 32, 32);
+			var moonMaterial = new THREE.MeshStandardMaterial(
+				{
+					color: 0xcccccc,
+					emissive: 0xcccccc
+				}
+			)
+			var moonLocation = new THREE.Vector3(-38400, 0, 0);
+			moonMesh = new THREE.Mesh(moonGeometry, moonMaterial);
+			moonMesh.position.set(-38400, 0, 0)
+			scene.add(moonMesh);
+
+			// ---------------------
+			// Skybox
+			// ---------------------
+
+			var skyboxGeometry = new THREE.SphereGeometry(100000000, 60, 40);  
+			var uniforms = {  
+			  texture: { type: 't', value: THREE.ImageUtils.loadTexture('stars.jpg') }
+			};
+
+			var skyboxMaterial = new THREE.ShaderMaterial( {  
+			  uniforms:       uniforms,
+			  vertexShader:   document.getElementById('sky-vertex').textContent,
+			  fragmentShader: document.getElementById('sky-fragment').textContent
+			});
+
+			skyBox = new THREE.Mesh(skyboxGeometry, skyboxMaterial);  
+			skyBox.scale.set(-1, 1, 1);  
+			skyBox.eulerOrder = 'XZY';  
+			skyBox.renderDepth = 1000.0;  
+			scene.add(skyBox);  
+			skyBox.rotation.x = Math.PI /3;
 
 			renderer = new THREE.WebGLRenderer( { antialias: false } );
 			renderer.setPixelRatio( window.devicePixelRatio );
@@ -147,21 +250,82 @@
 
 		}
 
+		var start = Date.now();
+		var last = Date.now();
 		function animate() {
 			requestAnimationFrame( animate );
 			renderer.render( scene, camera );
-			globeMesh.rotation.y += 0.001;
+
+			var now = Date.now();
+			var elapsed = now - last;
+			var deltaTheta = 2 * Math.PI * (elapsed / (60000));
+			globeMesh.rotation.y += deltaTheta;
+			last = now;
+
+			elapsed = now - start;
+			moonMesh.position.set(
+				38400 * Math.cos(2 * Math.PI * (elapsed / (30 * 60000))),
+				0,
+				38400 * Math.sin(-2 * Math.PI * (elapsed / (30 * 60000)))
+				);
+
+			glowMesh.material.uniforms.viewVector.value = 
+				new THREE.Vector3().subVectors( camera.position, glowMesh.position );
 		}
 	
 		window.onload = function() {
 			console.log('loading data');
-			$.getJSON("geodesic_data.json", function(json) {
+			$.getJSON("../data/geodesic_data.json", function(json) {
 				init(json);
 			});
 		}
 	</script>
 </head>
 <body>
+	<script id="vertexShader" type="x-shader/x-vertex">
+	uniform vec3 viewVector;
+	uniform float c;
+	uniform float p;
+	varying float intensity;
+	void main() 
+	{
+	    vec3 vNormal = normalize( normalMatrix * normal );
+		vec3 vNormel = normalize( normalMatrix * viewVector );
+		intensity = pow( c - dot(vNormal, vNormel), p );
+		
+	    gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+	}
+	</script>
+
+	<!-- fragment shader a.k.a. pixel shader -->
+	<script id="fragmentShader" type="x-shader/x-vertex"> 
+	uniform vec3 glowColor;
+	varying float intensity;
+	void main() 
+	{
+		vec3 glow = glowColor * intensity;
+	    gl_FragColor = vec4( glow, 1.0 );
+	}
+	</script>
+	<script type="application/x-glsl" id="sky-vertex">  
+	varying vec2 vUV;
+
+	void main() {  
+	  vUV = uv;
+	  vec4 pos = vec4(position, 1.0);
+	  gl_Position = projectionMatrix * modelViewMatrix * pos;
+	}
+	</script>
+
+	<script type="application/x-glsl" id="sky-fragment">  
+	uniform sampler2D texture;  
+	varying vec2 vUV;
+
+	void main() {  
+	  vec4 sample = texture2D(texture, vUV);
+	  gl_FragColor = vec4(sample.xyz, sample.w);
+	}
+	</script>  	
 		<div id="container"></div>
 
 </body>
